--- a/lab5/cd.html
+++ b/lab5/cd.html
@@ -1,4 +1,5 @@
 <select id="optmoduleid" name="optmoduleid  " class="commonInput" onblur="checkData(this)">
+    <option value="">Select Module</option>
     <option value='M00000000006'>Introduction to Compiling'</option>
     <option value='M00000000007'>Lexical Analysis'</option>
     <option value='M00000000008'>Syntax Analysis'</option>
