--- a/lab5/os.html
+++ b/lab5/os.html
@@ -1,4 +1,5 @@
 <select id="optmoduleid" name="optmoduleid" class="commonInput" onblur="checkData(this)">
+    <option value="">Select Module</option>
     <option value='M00000000020'>Introduction</option>
     <option value='M00000000021'>Processes</option>
     <option value='M00000000022'>Inter-process Communication</option>
