--- a/lab5/se.html
+++ b/lab5/se.html
@@ -1,4 +1,5 @@
 <select id="optmoduleid" name="optmoduleid  " class="commonInput" onblur="checkData(this)">
+    <option value="">Select Module</option>
     <option value='M00000000001'>Overview and SDLC Models</option>
     <option value='M00000000002'>System Analysis and Design</option>
     <option value='M00000000003'>'Coding and Testing</option>
