--- a/lab6.html
+++ b/lab6.html
@@ -8,16 +8,17 @@
 </head>
 <style type="text/css">
     .commonHeader{
-        font-family: calibri;
-        font-size: large;
-        font-weight: bold;
+        font-family: Arial;
+        font-size: 22px;
+        font-weight: bolder;
         text-align: center;
         margin: 5px;
+        padding: 7px;
         color: midnightblue;
     }
     .commonLabel{
-        font-family: calibri;
-        font-size: medium;
+        font-family: sans-serif;
+        font-size: 15px;
         font-weight: bold;
         text-align: right;
         margin: 5px;
@@ -93,9 +94,7 @@
         <form id="frmSchemeReg" name="frmSchemeReg" method="post" action="">
             <table class="box">
                 <tr>
-                    <td colspan="3" class="commonHeader">
-                        <h2>Investment Schemes Application Form</h2>
-                    </td>
+                    <td colspan="3" class="commonHeader">Scheme Registration Form</td>
                 </tr>
                 <tr>
                     <td class="commonLabel">Scheme Name:</td>
